--- a/views/app/badyet.ejs
+++ b/views/app/badyet.ejs
@@ -16,40 +16,47 @@
                         
                         <%- include('_incomes.ejs', { income: income }) %>
 
-                        <% if( !categories ) { %>                                     
-                            <div class="data-item removable-category">
-                                <div class="col-12 income-header">
-                                    <div class="row">
-                                        <div class="col-6">
-                                                <span class="">
-                                                    <span class="income-header-income">UNTITLED</span>
-                                                </span>
-                                                <a role="button" data-toggle="collapse" class="btn no-focus" href="#collapseExample"><i class="fas fa-caret-up"></i></a>
-                                        </div>
-                                        <div class="col-6">
-                                            <div class="row text-right income-header-pr-text">
-                                                <div class="col-6">Planned</div>
-                                                <div class="col-6">Remaining</div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="collapse show" id="collapseExample">
-                                    <div class="card card-body">
+                        <div class="categories-list">
+                            <% if( !categories ) { %>                                     
+                                <!-- <div class="data-item removable-category">
+                                    <div class="col-12 income-header">
                                         <div class="row">
                                             <div class="col-6">
-                                                <a role="button" data-toggle="" class="btn no-focus btn-add-items" href="#"><i class="fas fa-plus btn-add-paycheck-adder"></i> Add Item</a>  
+                                                    <span class="">
+                                                        <span class="income-header-income">UNTITLED</span>
+                                                    </span>
+                                                    <a role="button" data-toggle="collapse" class="btn no-focus" href="#collapseExample"><i class="fas fa-caret-up"></i></a>
                                             </div>
-                                        </div>        
+                                            <div class="col-6">
+                                                <div class="row text-right income-header-pr-text">
+                                                    <div class="col-6">Planned</div>
+                                                    <div class="col-6">Remaining</div>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
-                                </div>
-                            </div>
-                        <% } else { %>
-                            <div class="categories-list">
-                                <%- include('_categories.ejs', { categories: categories }) %>
-                            </div>
-                        <% } %>                                
+
+                                    <div class="category-items-list-">
+                            
+                                    </div> 
+
+                                    <div class="collapse show" id="collapseExample">
+                                        <div class="card card-body">
+                                            <div class="row">
+                                                <div class="col-6">
+                                                    <a role="button" data-toggle="" class="btn no-focus btn-add-items" href="#"><i class="fas fa-plus btn-add-paycheck-adder"></i> Add Item</a>  
+                                                </div>
+                                            </div>        
+                                        </div>
+                                    </div>
+                                </div> -->
+                            <% } else { %>
+                            
+                                    <%- include('_categories.ejs', { categories: categories }) %>
+                                
+                            <% } %> 
+                        </div>
+                        
                     </div>
                 </div> 
                 
