--- a/public/css/main.css
+++ b/public/css/main.css
@@ -10,6 +10,30 @@
     --icon-size: 20px;
 }
 
+.editableItem:hover {
+    background-color: rgb(222, 222, 233);
+    cursor: text;
+}
+
+/* border-radius: .4rem;
+position: absolute;
+box-shadow: 0 0.4rem 1.6rem 0 rgba(31,36,38,.16) */
+
+.editable-form {
+    width: 100%;
+    margin: auto;
+}
+
+.editable-item-form {
+    height: 80px;
+    width: 850px;
+    position: absolute;
+    z-index: 999;
+    left: 15px;
+    top: 200px;
+    
+}
+
 .no-focus {
     color: var(--brand-color);
     cursor: pointer;  
