--- a/views/app/_categories.ejs
+++ b/views/app/_categories.ejs
@@ -4,7 +4,7 @@
                 <div class="row">
                     <div class="col-6">
                             <span class="">
-                                <span class="income-header-income"><%= category.title %></span>
+                                <span class="income-header-income editableItem"><%= category.title %></span>
                             </span>
                             <button type="button" class="btn no-focus"><i data-toggle="collapse" data-target="#category-<%= category.id %>" class="fas fa-caret-up clicker"></i></button>
 
@@ -22,15 +22,15 @@
 
         <div class="category-items-list-<%= category.id %>">
             <% category.items.forEach(( item, index ) => { %>  
-                <div class="collapse show" id="category-<%= category.id %>">
+                <div class="collapse show item-data" id="category-<%= category.id %>" data-itemId="<%= item.id %>">
                     <div class="card card-body">
                         <div class="row">
-                            <div class="col-6">
+                            <div class="col-6 editableItem">
                                 <span class="income-header-income"><%= item.label %></span>      
                             </div>
                             <div class="col-6">
                                 <div class="row text-right income-header-pr-text">
-                                    <div class="col-6">$<%= item.planned %></div>
+                                    <div class="col-6 editableItem">$<%= item.planned %></div>
                                     <div class="col-6">$<%= item.spend %></div>
                                 </div>
                             </div>
