--- a/views/layouts/footer.ejs
+++ b/views/layouts/footer.ejs
@@ -1,5 +1,8 @@
-    
-    <script src="/js/axios.min.js"></script>
-    <script src="/js/app.js" type="module"></script> 
+
+    <% if (currentUserAuthenticated) { %>
+            <script src="/js/axios.min.js"></script>
+            <script src="/js/app.js" type="module"></script> 
+    <% } %>    
+
 </body>
 </html>
