refractoring front end js

--- a/views/app/_categories.ejs
+++ b/views/app/_categories.ejs
@@ -26,11 +26,11 @@
                     <div class="card card-body">
                         <div class="row">
                             <div class="col-6 editableItem">
-                                <span class="income-header-income"><%= item.label %></span>      
+                                <span class="income-header-income item-label"><%= item.label %></span>      
                             </div>
                             <div class="col-6">
                                 <div class="row text-right income-header-pr-text">
-                                    <div class="col-6 editableItem">$<%= item.planned %></div>
+                                    <div class="col-6 editableItem item-planned">$<%= item.planned %></div>
                                     <div class="col-6">$<%= item.spend %></div>
                                 </div>
                             </div>
