--- a/views/app/_incomes.ejs
+++ b/views/app/_incomes.ejs
@@ -8,8 +8,7 @@
                         <span class="income-header-income">Income</span>
                         <span class="income-header-month"><small>for</small><%= income.month %></span>
                     </span>
-                    <button type="button" class="btn no-focus"><i data-toggle="collapse" data-target="#income-<%= income.id %>" class="fas fa-caret-up clicker"></i></button>
-                    <!-- <i data-toggle="collapse" data-target="#collapseExample1" class="fas fa-caret-up"></i> -->
+                    <button type="button" class="btn no-focus"><i data-toggle="collapse" data-target="#income-<%= income.id %>" class="fas fa-caret-up fa-lg clicker"></i></button>
             </div>
             <div class="col-6">
                 <div class="row text-right income-header-pr-text">
@@ -45,7 +44,7 @@
             <div class="row">
                 <div class="col-6">
                     <input type="hidden" class="income-category-id" value="<%= income.category_id %>"> 
-                    <a role="button" data-toggle="" class="btn no-focus btn-add-items add-income-item-button" href="#"><i class="fas fa-plus btn-add-paycheck-adder"></i> Add Paycheck</a>  
+                    <a role="button" data-toggle="" class="btn no-focus btn-add-items add-income-item-button" href="#"><i class="fas fa-plus "></i> Add Paycheck</a>  
                 </div>
                 <div class="col-6">
                     <div class="row text-right income-header-pr-text">
