--- a/public/css/main.css
+++ b/public/css/main.css
@@ -60,15 +60,13 @@
 
 
 .editable-item-form {
-    width: 945px;
+    width: 800px;
     position: absolute;
-    z-index: 999;
     box-shadow: 0 0.4rem 1.6rem 0 rgba(31,36,38,.26);
-    left: 10px;
-    left: 350px;  
 }
 
 .no-focus {
+    padding: 0px;
     color: var(--brand-color);
     cursor: pointer;  
     /* margin-left: 5px; */
@@ -269,7 +267,6 @@ html body {
 }
 
 .income-header-income {
-    font-size: 20px;
     letter-spacing: -1px;
     text-transform: uppercase;
     font-weight: bold;
@@ -382,12 +379,6 @@ button.badyet-date:active {
     font-size: 15px;
     padding: 15px 20px 15px 0px;
     font-weight: bold;
-}
-
-.btn-add-paycheck-adder {
-    font-size: 15px;
-    margin-bottom: 2px;
-    margin-right: 2px;
 }
 
 /******************** RIGHT *****************/
