--- a/views/app/_categories.ejs
+++ b/views/app/_categories.ejs
@@ -45,7 +45,7 @@
                     <div class="row">
                         <div class="col-6">
                             <input type="hidden" class="category_id" value="<%= category.id %>"> 
-                            <a role="button" data-toggle="" class="btn no-focus btn-add-items add-category-item-button" href="#"><i class="fas fa-plus btn-add-paycheck-adder"></i> Add Item</a>  
+                            <button role="button" data-toggle="" class="btn no-focus btn-add-items add-category-item-button" href="#"><i class="fas fa-plus"></i> Add Item</button>  
                         </div>
                         <div class="col-6">
                             <div class="row text-right income-header-pr-text">
