--- a/public/css/main.css
+++ b/public/css/main.css
@@ -10,6 +10,10 @@
     --icon-size: 20px;
 }
 
+.no-events {
+    pointer-events: none;
+}
+
 .editableItem:hover {
     background-color: rgb(222, 222, 233);
     cursor: text;
@@ -17,20 +21,20 @@
 
 
 .editable-form {
-    padding: 20px;
+    padding: 10px;
     width: 100%;
     margin: auto;
 }
 
-.editable-form .fa-times {
+.editable-form .fa-trash {
+    z-index: 2;
     font-size: 20px;
     position: absolute;
-    margin-left: -11px;
     width: 16px;
     height: 16px;
 }
 
-.editable-form .fa-times:hover {
+.editable-form .fa-trash:hover {
     color: red;
     cursor: pointer;
 }
@@ -54,13 +58,12 @@
     width: 100%;
     font-size: 20px;
     text-transform: uppercase;
-    font-weight: bold;
     color: #696969;   
 }
 
 
 .editable-item-form {
-    width: 800px;
+    width: auto;
     position: absolute;
     box-shadow: 0 0.4rem 1.6rem 0 rgba(31,36,38,.26);
 }
