--- a/views/app/_incomes.ejs
+++ b/views/app/_incomes.ejs
@@ -43,6 +43,7 @@
         <div class="card card-body">
             <div class="row">
                 <div class="col-6">
+                    <input type="hidden" class="income_id" value="<%= income.id %>"> 
                     <input type="hidden" class="income-category-id" value="<%= income.category_id %>"> 
                     <a role="button" data-toggle="" class="btn no-focus btn-add-items add-income-item-button" href="#"><i class="fas fa-plus "></i> Add Paycheck</a>  
                 </div>
