--- a/views/app/_date.ejs
+++ b/views/app/_date.ejs
@@ -2,6 +2,19 @@
     <div id="">
         <button type="button" class="btn btn-light badyet-date no-focus"><%= income.month %> <span><%= income.year %> <i class="fas fa-caret-up no-focus"></i></span></button>
         
+        <div class="btn-group">
+                <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Action
+                </button>
+                <div class="dropdown-menu">
+                  <a class="dropdown-item" href="#">Action</a>
+                  <a class="dropdown-item" href="#">Another action</a>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="#">Separated link</a>
+                </div>
+              </div>
+
         <div class="amount-budgeted">
             <span class="amount-budgeted-amount">
                 $100.00
