--- a/views/layouts/footer.ejs
+++ b/views/layouts/footer.ejs
@@ -2,6 +2,7 @@
     <% if (currentUserAuthenticated) { %>
             <script src="/js/axios.min.js"></script>
             <script src="/js/app.js" type="module"></script> 
+            <script src="/datepicker.min.js" ></script> 
     <% } %>    
 
 </body>
