--- a/views/app/_noMonthIncome.ejs
+++ b/views/app/_noMonthIncome.ejs
@@ -1,19 +1,47 @@
-  <div class="col category-list">
-    <div class="data-item text-center loading-header">
-            <h1>HI</h1>    
-    </div>
- </div>
 
 
-                        
-             
+<div class="row" style="border-radius: 5px; width: 100%; background-color: white; box-shadow: 0 0.4rem Aug.6rem 0 rgba(31,36,38,.26); border: 1px solid rgba(0,0,0,.2);">
+   <div class="col">
+      <div class="row" style="height: 100%; padding: 10px;">
 
- 
- 
- <!-- <div class="col category-list">
-    <div class="data-item text-center no-income-header">
-        <h4 class="font-weight-bold">Hi There, looks like you need a budget for Septermber</h4>
-        <button type="submit" class="btn btn-info" role="button" href="/">Start Planning for September</button>
-    </div>  
- </div> -->
-    
+            <div class="col date-settings">Prev</div>
+            <div class="col date-settings text-center">
+               <div class="">Aug</div>
+               <small>2012</small>
+            </div>
+            <div class="col date-settings">
+                  <div class="">Aug</div>
+                  <div><small>2012</small></div>
+            </div>
+            <div class="col date-settings">
+                  <div class="">Aug</div>
+                  <div><small></small></div>
+            </div>
+            <div class="col date-settings">
+                  <div class="">Aug</div>
+                  <div><small></small></div>
+            </div>
+            <div class="col date-settings">
+                  <div class="">Aug</div>
+                  <div><small></small></div>
+            </div>
+            <div class="col date-settings">
+                  <div class="">Aug</div>
+                  <div><small></small></div>
+            </div>
+            <div class="col date-settings">
+                  <div class="">Aug</div>
+                  <div><small></small></div>
+            </div>
+            <div class="col date-settings">
+                  <div class="">Aug</div>
+                  <div><small></small></div>
+            </div>
+            <div class="col date-settings">
+                  <div class="">Aug</div>
+                  <div><small></small></div>
+            </div>
+            <div class="col date-settings">next</div>
+      </div>
+   </div>
+</div>
