--- a/views/app/_date.ejs
+++ b/views/app/_date.ejs
@@ -1,5 +1,5 @@
 <div class="data-date">
-    <button type="button"  id="date-picker" class="btn btn-light badyet-date no-focus"><%= income.month %> <span class="no-events"><%= income.year %> <i class="fas fa-caret-up no-focus no-events "></i></span></button>
+    <button type="button"  id="date-picker" data-month="<%= income.month %>" data-year="<%= income.year %>" class="btn btn-light badyet-date no-focus"><%= income.month %> <span class="no-events"><%= income.year %> <i class="fas fa-caret-up no-focus no-events "></i></span></button>
     <div class="amount-budgeted">
         <span class="amount-budgeted-amount">
             $100.00
