adding new income and date picker ui functioning

--- a/views/app/_noMonthIncome.ejs
+++ b/views/app/_noMonthIncome.ejs
@@ -1,47 +1,1 @@
-
-
-<div class="row" style="border-radius: 5px; width: 100%; background-color: white; box-shadow: 0 0.4rem Aug.6rem 0 rgba(31,36,38,.26); border: 1px solid rgba(0,0,0,.2);">
-   <div class="col">
-      <div class="row" style="height: 100%; padding: 10px;">
-
-            <div class="col date-settings">Prev</div>
-            <div class="col date-settings text-center">
-               <div class="">Aug</div>
-               <small>2012</small>
-            </div>
-            <div class="col date-settings">
-                  <div class="">Aug</div>
-                  <div><small>2012</small></div>
-            </div>
-            <div class="col date-settings">
-                  <div class="">Aug</div>
-                  <div><small></small></div>
-            </div>
-            <div class="col date-settings">
-                  <div class="">Aug</div>
-                  <div><small></small></div>
-            </div>
-            <div class="col date-settings">
-                  <div class="">Aug</div>
-                  <div><small></small></div>
-            </div>
-            <div class="col date-settings">
-                  <div class="">Aug</div>
-                  <div><small></small></div>
-            </div>
-            <div class="col date-settings">
-                  <div class="">Aug</div>
-                  <div><small></small></div>
-            </div>
-            <div class="col date-settings">
-                  <div class="">Aug</div>
-                  <div><small></small></div>
-            </div>
-            <div class="col date-settings">
-                  <div class="">Aug</div>
-                  <div><small></small></div>
-            </div>
-            <div class="col date-settings">next</div>
-      </div>
-   </div>
-</div>
+<h1>Rendred without data</h1>
