--- a/views/app/_categories.ejs
+++ b/views/app/_categories.ejs
@@ -2,9 +2,9 @@
     <div class="data-item">
             <div class="col-12 income-header">
                 <div class="row">
-                    <div class="col-6">
-                        <span class="income-header-income editableCategory category-title" data-categoryid="<%= category.id %>"><%= category.title %></span>
-                        <button type="button" class="btn no-focus"><i data-toggle="collapse" data-target="#category-<%= category.id %>" class="fas fa-caret-up clicker"></i></button>
+                    <div class="col-6 center-self">
+                        <span class="editableCategory category-title" data-categoryid="<%= category.id %>"><%= category.title %></span>
+                        <button type="button" class="btn no-focus clicker" data-toggle="collapse" data-target="#category-<%= category.id %>"><i class="fas fa-caret-up"></i></button>
 
                     </div>
                     <div class="col-6">
@@ -24,11 +24,11 @@
                     <div class="card card-body">
                         <div class="row">
                             <div class="col-6 editableItem">
-                                <span class="income-header-income item-label"><%= item.label %></span>      
+                                <span class="item-label"><%= item.label %></span>      
                             </div>
                             <div class="col-6">
                                 <div class="row text-right income-header-pr-text">
-                                    <div class="col-6 editableItem item-planned">$<%= item.planned %></div>
+                                    <div class="col-6 editableItem category-planned">$<%= item.planned %></div>
                                     <div class="col-6">$<%= item.spend %></div>
                                 </div>
                             </div>
