--- a/views/app/_incomes.ejs
+++ b/views/app/_incomes.ejs
@@ -2,13 +2,13 @@
 <div class="data-item">
     <div class="col-12 income-header">
         <div class="row">
-            <div class="col-6">
+            <div class="col-6 center-self">
                     <span class="">
                         <span class="income-header-icon"><i class="fas fa-money-bill-alt"></i></span>
                         <span class="income-header-income">Income</span>
                         <span class="income-header-month"><small>for</small><%= income.month %></span>
                     </span>
-                    <button type="button" class="btn no-focus"><i data-toggle="collapse" data-target="#income-<%= income.id %>" class="fas fa-caret-up fa-lg clicker"></i></button>
+                    <button type="button" class="btn no-focus clicker" data-toggle="collapse" data-target="#income-<%= income.id %>"><i class="fas fa-caret-up fa-lg"></i></button>
             </div>
             <div class="col-6">
                 <div class="row text-right income-header-pr-text">
@@ -25,11 +25,11 @@
                 <div class="card card-body">
                     <div class="row">
                         <div class="col-6 editableItem">
-                            <span class="income-header-income item-label"><%= item.label %></span>
+                            <span class="item-label"><%= item.label %></span>
                         </div>
                         <div class="col-6">
                             <div class="row text-right income-header-pr-text">
-                                <span class="col-6 editableItem item-planned">$<%= item.planned %></span>
+                                <span class="col-6 editableItem income-planned">$<%= item.planned %></span>
                                 <span class="col-6">$<%= item.spend %></span>
                             </div>
                         </div>
@@ -44,12 +44,12 @@
             <div class="row">
                 <div class="col-6">
                     <input type="hidden" class="income_id" value="<%= income.id %>"> 
-                    <input type="hidden" class="income-category-id" value="<%= income.id %>>"> 
+                    <input type="hidden" class="income-category-id" value="<%= income.category_id %>"> 
                     <a role="button" data-toggle="" class="btn no-focus btn-add-items add-income-item-button" href="#"><i class="fas fa-plus "></i> Add Paycheck</a>  
                 </div>
                 <div class="col-6">
                     <div class="row text-right income-header-pr-text">
-                        <div class="col-6">$0.00</div>
+                        <div class="col-6">$<%= income.budget %></div>
                         <div class="col-6">$0.00</div>
                     </div>
                 </div>
