--- a/views/app/_incomes.ejs
+++ b/views/app/_incomes.ejs
@@ -49,7 +49,7 @@
                 </div>
                 <div class="col-6">
                     <div class="row text-right income-header-pr-text">
-                        <div class="col-6">$<%= income.budget %></div>
+                        <div class="col-6 total-income">$<%= income.budget %></div>
                         <div class="col-6">$0.00</div>
                     </div>
                 </div>
