budget middle panel is functioning

--- a/views/app/_incomes.ejs
+++ b/views/app/_incomes.ejs
@@ -47,7 +47,7 @@
                     <input type="hidden" class="income-category-id" value="<%= income.category_id %>"> 
                     <a role="button" data-toggle="" class="btn no-focus btn-add-items add-income-item-button" href="#"><i class="fas fa-plus "></i> Add Paycheck</a>  
                 </div>
-                <div class="col-6">
+                <div class="col-6 center-self">
                     <div class="row text-right income-header-pr-text">
                         <div class="col-6 total-income">$<%= income.budget %></div>
                         <div class="col-6">$0.00</div>
