--- a/views/app/_categories.ejs
+++ b/views/app/_categories.ejs
@@ -10,8 +10,9 @@
                     <div class="col-6">
                         <div class="row text-right income-header-pr-text">
                             <div class="col-6">Planned</div>
-                            <div class="col-6">Remaining</div>
-                            <!-- Drop down -->
+                            <div class="col-6">
+                              <button type="button" class="btn no-focus rs-btn">Remaining</i></button> <i class="fas fa-caret-down"></i>
+                            </div>
 
                         </div>
                     </div>
