--- a/views/app/_incomes.ejs
+++ b/views/app/_incomes.ejs
@@ -19,7 +19,7 @@
         </div>                    
     </div>
     <div class="data-incomes-list">
-        <% incomeItems.forEach(( item, index ) => { %>
+        <% income.items.forEach(( item, index ) => { %>
             
             <div class="collapse show item-data" id="income-<%= income.id %>" data-itemid="<%=item.id %>">
                 <div class="card card-body">
