--- a/views/app/rightpanel.ejs
+++ b/views/app/rightpanel.ejs
@@ -8,7 +8,7 @@
         
         <p class="top-panel-header-info">
             <span style="display: block; font-size: 20px;">Income</span>
-            <strong style="display: inline-block; font-size: 35px">$300</strong>
+            <strong style="display: inline-block; font-size: 35px">$<%= income.budget %></strong>
         </p>
     </div>
 
@@ -16,7 +16,7 @@
 
 <div class="row middle-panel-data justify-content-md-center">
     <div class="col-3"> 
-        <button type="button" class="btn no-focus tab-data-planned">PLANNED</button>
+        <button type="button" class="btn no-focus tab-data-planned active-tab">PLANNED</button>
     </div> 
     <div class="col-3">
         <button type="button" class="btn no-focus tab-data-spent">SPENT</button>
@@ -28,22 +28,15 @@
 
 <div class="row bottom-panel-data justify-content-md-center">
     <div class="col col-lg-8 bottom-panel-data-budget-data">
-        <div class="list-group">
-            <a href="#" class="list-group-item list-group-item-action budget-data-item">Cras justo odio</a>
-            <a href="#" class="list-group-item list-group-item-action budget-data-item">Morbi leo risus</a>
-            <a href="#" class="list-group-item list-group-item-action budget-data-item">Porta ac consectetur ac</a>
-            <a href="#" class="list-group-item list-group-item-action budget-data-item">Dapibus ac facilisis in</a>
-            <a href="#" class="list-group-item list-group-item-action budget-data-item">Vestibulum at eros</a>
-            <a href="#" class="list-group-item list-group-item-action budget-data-item">Cras justo odio</a>
-            <a href="#" class="list-group-item list-group-item-action budget-data-item">Dapibus ac facilisis in</a>
-            <a href="#" class="list-group-item list-group-item-action budget-data-item">Morbi leo risus</a>
-            <a href="#" class="list-group-item list-group-item-action budget-data-item">Porta ac consectetur ac</a>
-            <a href="#" class="list-group-item list-group-item-action budget-data-item">Vestibulum at eros</a>
-            <a href="#" class="list-group-item list-group-item-action budget-data-item">Cras justo odio</a>
-            <a href="#" class="list-group-item list-group-item-action budget-data-item">Dapibus ac facilisis in</a>
-            <a href="#" class="list-group-item list-group-item-action budget-data-item">Morbi leo risus</a>
-            <a href="#" class="list-group-item list-group-item-action budget-data-item">Porta ac consectetur ac</a>
-            <a href="#" class="list-group-item list-group-item-action budget-data-item">Vestibulum at eros</a>
+        <div class="list-group budget-data-list">
+            
+            <% summary.forEach( cate => { %>
+                <a href="#" class="list-group-item list-group-item-action budget-data-item">
+                    <%= cate.title %>
+                    <span class="float-right">$<%= cate.total %> </span>
+                </a>
+
+            <% })  %>  
         </div>
     </div> 
 </div>
