--- a/public/css/main.css
+++ b/public/css/main.css
@@ -578,3 +578,8 @@ button.badyet-date:active {
     font-weight: bold;
     color: #838282;
 }
+
+.active-tab {
+    color: black;
+    font-weight: bold;
+}
