updating summar tab while adding/removing items and category is functioning

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -557,7 +557,7 @@ button.badyet-date:active {
     padding: 0;
 }
 
-.budget-data-item {
+.planned-item {
     background-color: var(--background-color);
     padding-right: 0px;
     padding-left: 0px;
